--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ jobs:
           command: docker push ${GCR_REPO}/${IMAGE_NAME}
       - slack/notify:
           color: '#42e2f4'
-          message: This is a custom message notification
+          message: Message notification
           webhook: ${SLACK_WEBHOOK}
 workflows:
   version: 2
