--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
           command: |
             gcloud --quiet config set project ${GCP_PROJECT}
             gcloud --quiet config set compute/zone ${CLOUDSDK_COMPUTE_ZONE}
-            echo ${GCP_SERVICE_ACCOUNT_KEY} | base64 -d | gcloud auth activate-service-account --key-file=-
+            echo ${ACCT_AUTH} | base64 -d | gcloud auth activate-service-account --key-file=-
             gcloud --quiet auth configure-docker         
       - run:
           name: Build docker image and set image tag
