--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,8 @@ jobs:
           command: |
             gcloud --quiet config set project ${GCP_PROJECT}
             gcloud --quiet config set compute/zone ${CLOUDSDK_COMPUTE_ZONE}
-            echo ${ACCT_AUTH} | base64 -d | gcloud auth activate-service-account --key-file=-
+            echo ${ACCT_AUTH} | base64 -d > ${HOME}/account-auth.json
+            gcloud auth activate-service-account --key-file=${HOME}/account-auth.json
             gcloud --quiet auth configure-docker         
       - run:
           name: Build docker image and set image tag
