modify workflow config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -87,3 +87,6 @@ workflows:
           filters:
             branches:
               only: master
+      - create_pr:
+          requires:
+            - build
