modify base image

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,21 +38,21 @@ jobs:
           name: install kubectl
           command: |
             curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl
-            sudo mv kubectl /usr/local/bin
+            mv kubectl /usr/local/bin
             chmod +x /usr/local/bin/kubectl
       - run:
           name: install kustomize
           command: |
             wget https://github.com/kubernetes-sigs/kustomize/releases/download/kustomize%2Fv3.5.4/kustomize_v3.5.4_linux_amd64.tar.gz
             tar xvzf kustomize_v3.5.4_linux_amd64.tar.gz
-            sudo mv kustomize /usr/local/bin
+            mv kustomize /usr/local/bin
             chmod +x /usr/local/bin/kustomize
       - run:
           name: install hub
           command: |
             curl -sSLf https://github.com/github/hub/releases/download/v2.8.3/hub-linux-amd64-2.8.3.tgz | \
             tar zxf - --strip-components=1 -C /tmp/ && \
-            sudo mv /tmp/bin/hub /usr/local/bin/hub
+            mv /tmp/bin/hub /usr/local/bin/hub
       - run:
           name: clone kubernetes manifests repo
           command: |
