--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,7 +62,6 @@ jobs:
           name: clone kubernetes manifests repo
           command: |
             git clone --depth 1 -b master git@github.com:TaxiN/sample-manifest-repo.git
-            git checkout --no-track -b ${HEAD_BRANCH}
       - run:
           name: edit kubernetes manifests
           command: |
@@ -73,13 +72,17 @@ jobs:
           command: |
             git config --global user.email "circleci-user@noreply.github.com"
             git config --global user.name "circleci-user"
+            git checkout --no-track -b ${HEAD_BRANCH}
             git add sample-manifest-repo/
-            git commit -am "modify image tag"
+            git commit -am "[ci skip] modify image tag"
       - run:
           name: create a pull request
           command: |
-            hub push origin ${HEAD_BRANCH}
-            hub pull-request --message="update image tag" --base=${CIRCLE_PROJECT_USERNAME}:master --head=${CIRCLE_PROJECT_USERNAME}:${HEAD_BRANCH}
+            git push origin ${HEAD_BRANCH}
+            hub pull-request \
+              --message="update image tag" \
+              --base=${CIRCLE_PROJECT_USERNAME}:master \
+              --head=${CIRCLE_PROJECT_USERNAME}:${HEAD_BRANCH}
 workflows:
   version: 2
   build:
