--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -72,13 +72,14 @@ jobs:
           command: |
             git config --global user.email "circleci-user@noreply.github.com"
             git config --global user.name "circleci-user"
+            git branch --set-upstream-to=origin/${HEAD_BRANCH} ${HEAD_BRANCH}
             git checkout --no-track -b ${HEAD_BRANCH}
             git add sample-manifest-repo/
             git commit -am "[ci skip] modify image tag"
+            git push origin ${HEAD_BRANCH}
       - run:
           name: create a pull request
           command: |
-            git push origin ${HEAD_BRANCH}
             hub pull-request \
               --message="update image tag" \
               --base=${CIRCLE_PROJECT_USERNAME}:master \
