--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,10 +78,11 @@ jobs:
       - run:
           name: commit and push the changes
           command: |
+            git remote remove origin
+            git remote add origin https://github.com/TaxiN/sample-manifest-repo.git
             git checkout -b ${HEAD_BRANCH} origin/${HEAD_BRANCH}
             git branch --set-upstream-to=origin/${HEAD_BRANCH} ${HEAD_BRANCH}
             git add sample-manifest-repo/
-            git remote rm sample-app-repo
             git commit -am "[ci skip] modify image tag"
             git push origin ${HEAD_BRANCH}
       - run:
