--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,20 +78,19 @@ jobs:
       - run:
           name: commit and push the changes
           command: |
-            git remote remove origin
-            git remote add origin https://github.com/TaxiN/sample-manifest-repo.git
-            git checkout -b ${HEAD_BRANCH} origin/${HEAD_BRANCH}
-            git branch --set-upstream-to=origin/${HEAD_BRANCH} ${HEAD_BRANCH}
+            git remote set-url origin https://github.com/TaxiN/sample-manifest-repo.git
+            git checkout -b stg origin/stg
+            git branch --set-upstream-to=origin/stg stg
             git add sample-manifest-repo/
             git commit -am "[ci skip] modify image tag"
-            git push origin ${HEAD_BRANCH}
+            git push origin stg
       - run:
           name: create a pull request
           command: |
             hub pull-request \
               --message="update image tag" \
               --base=${CIRCLE_PROJECT_USERNAME}:master \
-              --head=${CIRCLE_PROJECT_USERNAME}:${HEAD_BRANCH}
+              --head=${CIRCLE_PROJECT_USERNAME}:stg
 workflows:
   version: 2
   build:
