--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -82,10 +82,8 @@ jobs:
           command: |
             cd ./sample-manifest-repo
             git add .
-            git status
-            cat ./overlays/staging/kustomization.yaml
-            # git commit -m "Updating image tag ${GCR_REPO}/${IMAGE_NAME}:$CIRCLE_SHA1"
-            # git push origin stg
+            git commit -m "Updating image tag ${GCR_REPO}/${IMAGE_NAME}:$CIRCLE_SHA1"
+            git push origin stg
       - run:
           name: create a pull request
           command: |
