--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -83,12 +83,15 @@ jobs:
             cd ./sample-manifest-repo
             git add .
             git commit -m "Updating image tag ${GCR_REPO}/${IMAGE_NAME}:$CIRCLE_SHA1"
+            git branch --set-upstream-to=origin/stg stg
             git push origin stg
       - run:
           name: create a pull request
           command: |
             hub pull-request \
-              --message="Deploying image ${GCR_REPO}/${IMAGE_NAME}:$CIRCLE_SHA1" \
+              --message="Deploying image ${GCR_REPO}/${IMAGE_NAME}:$CIRCLE_SHA1 \
+              Built from commit ${COMMIT_SHA} of repository sample-app-ci \
+              Author: $(git log --format='%an <%ae>' -n 1 HEAD)" \
               --base=${CIRCLE_PROJECT_USERNAME}:master \
               --head=${CIRCLE_PROJECT_USERNAME}:stg
 workflows:
