--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
           success_message: ':circleci-pass: Branch: $CIRCLE_BRANCH\nUser：$CIRCLE_USERNAME'
           failure_message: ':circleci-fail: Branch: $CIRCLE_BRANCH\nUser：$CIRCLE_USERNAME'
           webhook: ${SLACK_WEBHOOK}
-  create_pr:
+  push_changes_to_manifest_repo:
     docker:
       - image: google/cloud-sdk
     steps:
@@ -52,12 +52,6 @@ jobs:
             tar xvzf kustomize_v3.5.4_linux_amd64.tar.gz
             mv kustomize /usr/local/bin
             chmod +x /usr/local/bin/kustomize
-      - run:
-          name: install hub
-          command: |
-            curl -sSLf https://github.com/github/hub/releases/download/v2.8.3/hub-linux-amd64-2.8.3.tgz | \
-            tar zxf - --strip-components=1 -C /tmp/ && \
-            mv /tmp/bin/hub /usr/local/bin/hub
       - run:
           name: set config of github repo
           command: |
@@ -85,6 +79,35 @@ jobs:
             git commit -m "Updating image tag ${GCR_REPO}/${IMAGE_NAME}:$CIRCLE_SHA1"
             git branch --set-upstream-to=origin/stg stg
             git push origin stg
+  create_pr_in_manifest_repo:
+    docker:
+      - image: google/cloud-sdk
+    steps:
+      - checkout
+      - run:
+          name: install hub
+          command: |
+            curl -sSLf https://github.com/github/hub/releases/download/v2.8.3/hub-linux-amd64-2.8.3.tgz | \
+            tar zxf - --strip-components=1 -C /tmp/ && \
+            mv /tmp/bin/hub /usr/local/bin/hub
+      - run:
+          name: set config of github repo
+          command: |
+            git config --global user.email "circleci-user@noreply.github.com"
+            git config --global user.name "circleci-user"
+      - run:
+          name: clone kubernetes manifests repo
+          command: |
+            git clone --depth 1 -b stg git@github.com:TaxiN/sample-manifest-repo.git
+            cd ./sample-manifest-repo
+            git remote set-url origin git@github.com:TaxiN/sample-manifest-repo.git
+      - add_ssh_keys:
+          fingerprints:
+            - "e0:a9:bf:7d:57:2f:f2:ef:f8:a3:01:05:a9:6a:6a:0e"
+      - run:
+          name: create pr
+          command: |
+            cd ./sample-manifest-repo
             hub pull-request \
               --message="Deploying image ${GCR_REPO}/${IMAGE_NAME}:$CIRCLE_SHA1 \
               Built from commit ${COMMIT_SHA} of repository sample-app-ci \
@@ -98,7 +121,14 @@ workflows:
       - build:
           filters:
             branches:
-              only: master
-      - create_pr:
+              only: stg
+      - push_changes_to_manifest_repo:
           requires:
-            - build
+                - build
+          filters:
+            branches:
+              only: stg
+      - create_pr_in_manifest_repo:
+          filters:
+            branches:
+              only: master
