--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 orbs:
   slack: circleci/slack@3.4.2
 jobs:
-  build:
+  build_and_push_image:
     docker:
       - image: google/cloud-sdk
     working_directory: /go/src/github.com/TaxiN/sample-app-ci
@@ -113,13 +113,13 @@ workflows:
   version: 2
   build:
     jobs:
-      - build:
+      - build_and_push_image:
           filters:
             branches:
               only: stg
       - push_changes_to_manifest_repo:
           requires:
-                - build
+                - build_and_push_image
           filters:
             branches:
               only: stg
